Don't create new Boolean instances if we can help it.